// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SceneGroundingPrompt golden > leaves optional blocks out for the generic variant 1`] = `
{
  "system": "씬 본문을 읽고, 이 장면을 구체적인 사건으로 못박는 사실을 제안하라.
본문이 가사나 분위기 스케치처럼 추상적이면, 그 정서에 어울리는 구체적 상황을 새로 정해도 좋다.
각 항목은 한 문장으로 짧게 쓰고, 은유·수식 없이 사실만 적어라.
인물은 반드시 주어진 이름으로만 부르고, 카드 id나 영문 슬러그를 그대로 쓰지 마라.
출력은 한국어 JSON 객체만 허용한다. 요청된 키만 담아라.
요청 항목:
- place (장소): 장면이 벌어지는 구체적인 공간. 은유가 아니라 실제 장소로 적어라.",
  "user": "[씬 본문]
추상적인 장면",
}
`;

exports[`SceneGroundingPrompt golden > leaves optional blocks out for the generic variant 2`] = `
{
  "system": "씬 본문을 읽고, 이 장면을 구체적인 사건으로 못박는 사실을 제안하라.
본문이 가사나 분위기 스케치처럼 추상적이면, 그 정서에 어울리는 구체적 상황을 새로 정해도 좋다.
각 항목은 한 문장으로 짧게 쓰고, 은유·수식 없이 사실만 적어라.
인물은 반드시 주어진 이름으로만 부르고, 카드 id나 영문 슬러그를 그대로 쓰지 마라.
출력은 한국어 JSON 객체만 허용한다. 요청된 키만 담아라.
요청 항목:
",
  "user": "[씬 본문]
추상적인 장면",
}
`;

exports[`SceneGroundingPrompt golden > leaves optional blocks out for the generic variant 3`] = `
{
  "system": "씬 본문을 읽고, 이 장면을 구체적인 사건으로 못박는 사실을 제안하라.
본문이 가사나 분위기 스케치처럼 추상적이면, 그 정서에 어울리는 구체적 상황을 새로 정해도 좋다.
각 항목은 한 문장으로 짧게 쓰고, 은유·수식 없이 사실만 적어라.
인물은 반드시 주어진 이름으로만 부르고, 카드 id나 영문 슬러그를 그대로 쓰지 마라.
출력은 한국어 JSON 객체만 허용한다. 요청된 키만 담아라.
요청 항목:
- time (시점): 계절·시각 등 장면이 놓인 시점.
- incident (사건): 오늘 이 인물에게 실제로 벌어진 사건 하나. 감정이 아니라 사건으로 적어라.",
  "user": "[등장인물]
하나, 준

[이미 확정된 사실 — 이와 모순되지 않게 제안하라]
- 장소: 부두
- 시간: 새벽

[씬 본문]
비가 내린다. 누군가 기다린다.",
}
`;

exports[`SceneGroundingPrompt golden > leaves optional blocks out for the xs variant 1`] = `
{
  "system": "씬을 구체화한다. JSON 객체만 출력: {"place":""}.",
  "user": "추상적인 장면",
}
`;

exports[`SceneGroundingPrompt golden > leaves optional blocks out for the xs variant 2`] = `
{
  "system": "씬을 구체화한다. JSON 객체만 출력: {}.",
  "user": "추상적인 장면",
}
`;

exports[`SceneGroundingPrompt golden > leaves optional blocks out for the xs variant 3`] = `
{
  "system": "씬을 구체화한다. JSON 객체만 출력: {"time":"","incident":""}.",
  "user": "비가 내린다. 누군가 기다린다.",
}
`;

exports[`SceneGroundingPrompt golden > renders every block for the generic variant 1`] = `
{
  "system": "씬 본문을 읽고, 이 장면을 구체적인 사건으로 못박는 사실을 제안하라.
본문이 가사나 분위기 스케치처럼 추상적이면, 그 정서에 어울리는 구체적 상황을 새로 정해도 좋다.
각 항목은 한 문장으로 짧게 쓰고, 은유·수식 없이 사실만 적어라.
인물은 반드시 주어진 이름으로만 부르고, 카드 id나 영문 슬러그를 그대로 쓰지 마라.
출력은 한국어 JSON 객체만 허용한다. 요청된 키만 담아라.
요청 항목:
- incident (사건): 오늘 이 인물에게 실제로 벌어진 사건 하나. 감정이 아니라 사건으로 적어라.
- place (장소): 장면이 벌어지는 구체적인 공간. 은유가 아니라 실제 장소로 적어라.
- relation (관계): 등장인물들이 서로 어떤 사이인지. 만난 경위와 거리감이 드러나게 적어라.
- time (시점): 계절·시각 등 장면이 놓인 시점.",
  "user": "[등장인물]
하나, 준

[이미 확정된 사실 — 이와 모순되지 않게 제안하라]
- 장소: 부두
- 시간: 새벽

[씬 본문]
비가 내린다. 누군가 기다린다.",
}
`;

exports[`SceneGroundingPrompt golden > renders every block for the rich variant 1`] = `
{
  "system": "씬 본문을 읽고, 이 장면을 구체적인 사건으로 못박는 사실을 제안하라.
본문이 가사나 분위기 스케치처럼 추상적이면, 그 정서에 어울리는 구체적 상황을 새로 정해도 좋다.
각 항목은 한 문장으로 짧게 쓰고, 은유·수식 없이 사실만 적어라.
인물은 반드시 주어진 이름으로만 부르고, 카드 id나 영문 슬러그를 그대로 쓰지 마라.
출력은 한국어 JSON 객체만 허용한다. 요청된 키만 담아라.
요청 항목:
- incident (사건): 오늘 이 인물에게 실제로 벌어진 사건 하나. 감정이 아니라 사건으로 적어라.
- place (장소): 장면이 벌어지는 구체적인 공간. 은유가 아니라 실제 장소로 적어라.
- relation (관계): 등장인물들이 서로 어떤 사이인지. 만난 경위와 거리감이 드러나게 적어라.
- time (시점): 계절·시각 등 장면이 놓인 시점.",
  "user": "[등장인물]
하나, 준

[이미 확정된 사실 — 이와 모순되지 않게 제안하라]
- 장소: 부두
- 시간: 새벽

[씬 본문]
비가 내린다. 누군가 기다린다.",
}
`;

exports[`SceneGroundingPrompt golden > renders every block for the xs variant 1`] = `
{
  "system": "씬을 구체화한다. JSON 객체만 출력: {"incident":"","place":"","relation":"","time":""}.",
  "user": "비가 내린다. 누군가 기다린다.",
}
`;
